// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SearchInput customize 1`] = `
<DocumentFragment>
  <div
    style="display: inline-block;"
  >
    <div
      class="css-nnvwbb-SearchInput"
    >
      <input
        aria-label="search items"
        class="css-1aqyn14-SearchInput"
        value=""
      />
      <svg
        aria-hidden="true"
        class="css-1f2hmcd-SearchInput"
        fill="currentColor"
        height="16"
        role="img"
        style="display: inline-block; user-select: none; vertical-align: text-bottom;"
        viewBox="0 0 16 16"
        width="16"
      >
        <path
          d="M11.5 7a4.499 4.499 0 11-8.998 0A4.499 4.499 0 0111.5 7zm-.82 4.74a6 6 0 111.06-1.06l3.04 3.04a.75.75 0 11-1.06 1.06l-3.04-3.04z"
          fill-rule="evenodd"
        />
      </svg>
    </div>
  </div>
</DocumentFragment>
`;

exports[`SearchInput defaultRender 1`] = `
<DocumentFragment>
  <div
    style="display: inline-block;"
  >
    <div
      class="css-nnvwbb-SearchInput"
    >
      <input
        aria-label="type some text to start searching"
        class="css-1aqyn14-SearchInput"
        value=""
      />
      <svg
        aria-hidden="true"
        class="css-1f2hmcd-SearchInput"
        fill="currentColor"
        height="16"
        role="img"
        style="display: inline-block; user-select: none; vertical-align: text-bottom;"
        viewBox="0 0 16 16"
        width="16"
      >
        <path
          d="M11.5 7a4.499 4.499 0 11-8.998 0A4.499 4.499 0 0111.5 7zm-.82 4.74a6 6 0 111.06-1.06l3.04 3.04a.75.75 0 11-1.06 1.06l-3.04-3.04z"
          fill-rule="evenodd"
        />
      </svg>
    </div>
  </div>
</DocumentFragment>
`;

exports[`SearchInput overview 1`] = `
<DocumentFragment>
  <div
    style="display: inline-block;"
  >
    <div
      class="css-nnvwbb-SearchInput"
    >
      <input
        aria-label="type some text to start searching"
        class="css-1aqyn14-SearchInput"
        value=""
      />
      <svg
        aria-hidden="true"
        class="css-1f2hmcd-SearchInput"
        fill="currentColor"
        height="16"
        role="img"
        style="display: inline-block; user-select: none; vertical-align: text-bottom;"
        viewBox="0 0 16 16"
        width="16"
      >
        <path
          d="M11.5 7a4.499 4.499 0 11-8.998 0A4.499 4.499 0 0111.5 7zm-.82 4.74a6 6 0 111.06-1.06l3.04 3.04a.75.75 0 11-1.06 1.06l-3.04-3.04z"
          fill-rule="evenodd"
        />
      </svg>
    </div>
  </div>
</DocumentFragment>
`;

exports[`SearchInput placeholder 1`] = `
<DocumentFragment>
  <div
    style="display: inline-block;"
  >
    <div
      class="css-nnvwbb-SearchInput"
    >
      <input
        aria-label="search items"
        class="css-1aqyn14-SearchInput"
        placeholder="start typing..."
        value=""
      />
      <svg
        aria-hidden="true"
        class="css-1f2hmcd-SearchInput"
        fill="currentColor"
        height="16"
        role="img"
        style="display: inline-block; user-select: none; vertical-align: text-bottom;"
        viewBox="0 0 16 16"
        width="16"
      >
        <path
          d="M11.5 7a4.499 4.499 0 11-8.998 0A4.499 4.499 0 0111.5 7zm-.82 4.74a6 6 0 111.06-1.06l3.04 3.04a.75.75 0 11-1.06 1.06l-3.04-3.04z"
          fill-rule="evenodd"
        />
      </svg>
    </div>
  </div>
</DocumentFragment>
`;
